# Game

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/MainWindow/: MainWindow.hpp
lib/allegro5/: liballegro.so.5.2.7  liballegro_acodec.so.5.2.7  liballegro_audio.so.5.2.7  liballegro_color.so.5.2.7  liballegro_font.so.5.2.7  liballegro_image.so.5.2.7  liballegro_main.so.5.2.7  liballegro_memfile.so.5.2.7  liballegro_primitives.so.5.2.7  liballegro_ttf.so.5.2.7
src/: main.cpp
src/MainWindow/: MainWindow.cpp
src/main/: main.cpp
